vue/nuxtjs-docker/deploy/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nuxt-js-service
spec:
  type: ClusterIP
  selector:
    component: nuxt-js-app
  ports:
    - port: 3000
      targetPort: 3000
