vue/nuxtjs-docker/deploy/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: nuxtjs.agung96tm.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nuxt-js-service
                port:
                  number: 3000
